--- a/style/styles.css
+++ b/style/styles.css
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
 body {
     margin: 0;
+    font-family: 'Open Sans', sans-serif;
 }
 
 nav {
@@ -16,8 +20,10 @@ ul li {
 }
 h1, h2, h3, h5 {
     color: white;
+    font-family: 'Raleway', sans-serif;
 }
 p {
+
     color: white;
     opacity: 0.6;
 
